<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/selectMode"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/selectMode"
        android:textColor="@android:color/background_dark"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050" />

    <ToggleButton
        android:id="@+id/plusBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="start"
        android:text="@string/plus"
        android:textOff="@string/plus"
        android:textOn="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMode"
        app:layout_constraintVertical_bias="0.00" />

    <ToggleButton
        android:id="@+id/plusMinusBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="start"
        android:text="@string/plusminus"
        android:textOff="@string/plusminus"
        android:textOn="@string/plusminus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMode"
        app:layout_constraintVertical_bias="0.10" />

    <ToggleButton
        android:id="@+id/multiBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="start"
        android:text="@string/multi"
        android:textOff="@string/multi"
        android:textOn="@string/multi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMode"
        app:layout_constraintVertical_bias="0.20" />

    <ToggleButton
        android:id="@+id/divBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="start"
        android:text="@string/div"
        android:textOff="@string/div"
        android:textOn="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMode"
        app:layout_constraintVertical_bias="0.30" />

    <EditText
        android:id="@+id/selectDiff"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/selectDiff"
        android:textColor="@android:color/background_dark"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divBtn"
        app:layout_constraintVertical_bias="0.130" />

    <Button
        android:id="@+id/startBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/textColorLink"
        android:enabled="false"
        android:text="@string/start"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDiff"
        app:layout_constraintVertical_bias="0.950" />

    <SeekBar
        android:id="@+id/seekBar1"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:indeterminate="false"
        android:min="1"
        android:max="9"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectDiff"
        app:layout_constraintVertical_bias="0.050" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:indeterminate="false"
        android:min="1"
        android:max="9"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectDiff"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/diff1"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="Select mode first"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toStartOf="@+id/seekBar2"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDiff"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/diff2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:hint="Select mode first"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toStartOf="@+id/seekBar2"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDiff"
        app:layout_constraintVertical_bias="0.500" />

</androidx.constraintlayout.widget.ConstraintLayout>